@@ -1,3 +1,5 @@
+* BUG#7514 Restauration de la relation 'commission' à partir de contrat/quittance
+
 Version 1.14 - 2017-11-09
 * FEA#7243 Amélioration des vues des bordereaux courtiers et assureurs en supprimant des champs non utilisés dans ce contexte
 * BUG#7295 Les champs d'une commission ne doivent pas être modifiable par un utilisateur
